--- a/src/scss/_custom-component.scss
+++ b/src/scss/_custom-component.scss
@@ -10,10 +10,6 @@
   justify-content: space-between;
 }
 
-#editor-window {
-  margin-bottom: 1.5rem;
-}
-
 #editor {
   min-height: 200px;
 }
@@ -28,11 +24,28 @@
 }
 
 .min-h-100 {
-  min-height: fit-content;
+  min-height: 100%;
+  height: fit-content;
 }
 
 #preview img {
   display: block;
   max-width: 90%;
   margin: 2rem auto;
+}
+
+#preview-window {
+  padding-bottom: 1.5rem;
+}
+
+.divider {
+  height: 1.5rem;
+}
+
+#editor-window {
+  margin-bottom: 1.5rem;
+}
+
+.h-100-custom {
+  height: calc(100% - 1.5rem);
 }
